@@ -1,3 +1,9 @@
+2007-06-05  Ross Burton  <ross@openedhand.com>
+
+	* main.c:
+	* Makefile.am:
+	Don't use libgnome (#443554). Also clean up dist rules.
+
 2007-02-02  William Jon McCann  <mccann@jhu.edu>
 
 	* drw-break-window.c: (drw_break_window_class_init),
