@@ -1,3 +1,8 @@
+2007-06-05  Ross Burton  <ross@openedhand.com>
+
+	* configure.in:
+	Call pkgconfig specifically for the typing break applet.
+
 2007-06-04  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* configure.in:
